--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.firebaseui:firebase-ui-firestore:6.2.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.braintreepayments:card-form:5.4.0'
+    implementation 'com.craftman.cardform:cardform:0.0.2'
 
 
 }
